--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- header section strats -->
     <div class="hero_bg_box">
       <div class="img-box">
-        <img src="images/hero-bg.jpg" alt="">
+        <img src="images/hero-bg.webp" alt="">
       </div>
     </div>
 
@@ -196,7 +196,7 @@
         <div class="col-md-6 px-0">
           <div class="img_container">
             <div class="img-box">
-              <img src="images/about-img.jpg" alt="" />
+              <img src="images/about-img.webp" alt="" />
             </div>
           </div>
         </div>
@@ -443,7 +443,7 @@
           <div class="carousel-item active">
             <div class="box">
               <div class="img-box">
-                <img src="images/client.png" alt="">
+                <img src="images/client.webp" alt="">
               </div>
               <div class="detail-box">
                 <h4>
@@ -516,7 +516,7 @@
   <section class="contact_section layout_padding">
     <div class="contact_bg_box">
       <div class="img-box">
-        <img src="images/contact-bg.jpg" alt="">
+        <img src="images/contact-bg.webp" alt="">
       </div>
     </div>
     <div class="container">
@@ -576,7 +576,7 @@
         <div class="col-md-4 col-sm-6 mx-auto ">
           <div class="box">
             <div class="img-box">
-              <img src="images/t1.jpg" alt="">
+              <img src="images/t1.webp" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -591,7 +591,7 @@
         <div class="col-md-4 col-sm-6 mx-auto ">
           <div class="box">
             <div class="img-box">
-              <img src="images/t2.jpg" alt="">
+              <img src="images/t2.webp" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -606,7 +606,7 @@
         <div class="col-md-4 col-sm-6 mx-auto ">
           <div class="box">
             <div class="img-box">
-              <img src="images/t3.jpg" alt="">
+              <img src="images/t3.webp" alt="">
             </div>
             <div class="detail-box">
               <h5>
